Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28099

Regression: QWizard does not look native on Windows Vista/7

XMLWordPrintable

    • f5fd53460387411a3ed192595562fc2cfd92a2b6

      The title bar of a QWizard is much higher than that of a native wizard. Compare the screenshots:

      trivialwizard example:

      native "Add Printer" wizard:

        1. addprinter.png
          addprinter.png
          52 kB
        2. trivialwizard.png
          trivialwizard.png
          69 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes