src/plugins/platforms/windows/qwindowsintegration.cpp
@@ -75,6 +75,7 @@
 
 #include <QtCore/private/qeventdispatcher_win_p.h>
 #include <QtCore/QDebug>
+#include <QtCore/QVariant>
 
 QT_BEGIN_NAMESPACE
 
@@ -109,6 +110,11 @@ public:
                                           void *eventProc) const;
     bool asyncExpose() const;
     void setAsyncExpose(bool value);
+
+    QVariantMap windowProperties(QPlatformWindow *window) const;
+    QVariant windowProperty(QPlatformWindow *window, const QString &name) const;
+    QVariant windowProperty(QPlatformWindow *window, const QString &name, const QVariant &defaultValue) const;
+    void setWindowProperty(QPlatformWindow *window, const QString &name, const QVariant &value);
 };
 
 void *QWindowsNativeInterface::nativeResourceForWindow(const QByteArray &resource, QWindow *window)
@@ -143,6 +149,37 @@ void *QWindowsNativeInterface::nativeResourceForBackingStore(const QByteArray &r
         return wbs->getDC();
     qWarning("%s: Invalid key '%s' requested.", __FUNCTION__, resource.constData());
     return 0;
+}
+
+static const char customMarginPropertyC[] = "WindowsCustomMargins";
+
+QVariant QWindowsNativeInterface::windowProperty(QPlatformWindow *window, const QString &name) const
+{
+    QWindowsWindow *platformWindow = static_cast<QWindowsWindow *>(window);
+    if (name == QLatin1String(customMarginPropertyC))
+        return qVariantFromValue(platformWindow->customMargins());
+    return QVariant();
+}
+
+QVariant QWindowsNativeInterface::windowProperty(QPlatformWindow *window, const QString &name, const QVariant &defaultValue) const
+{
+    const QVariant result = windowProperty(window, name);
+    return result.isValid() ? result : defaultValue;
+}
+
+void QWindowsNativeInterface::setWindowProperty(QPlatformWindow *window, const QString &name, const QVariant &value)
+{
+    QWindowsWindow *platformWindow = static_cast<QWindowsWindow *>(window);
+    if (name == QLatin1String(customMarginPropertyC))
+        platformWindow->setCustomMargins(qvariant_cast<QMargins>(value));
+}
+
+QVariantMap QWindowsNativeInterface::windowProperties(QPlatformWindow *window) const
+{
+    QVariantMap result;
+    const QString customMarginProperty = QLatin1String(customMarginPropertyC);
+    result.insert(customMarginProperty, windowProperty(window, customMarginProperty));
+    return result;
 }
 
 #ifndef QT_NO_OPENGL
@@ -356,6 +393,11 @@ QPlatformWindow *QWindowsIntegration::createPlatformWindow(QWindow *window) cons
     QWindowsWindow::WindowData requested;
     requested.flags = window->flags();
     requested.geometry = window->geometry();
+    // Apply custom margins (see  QWindowsWindow::setCustomMargins())).
+    const QVariant customMarginsV = window->property("_q_windowsCustomMargins");
+    if (customMarginsV.isValid())
+        requested.customMargins = qvariant_cast<QMargins>(customMarginsV);
+
     const QWindowsWindow::WindowData obtained
             = QWindowsWindow::WindowData::create(window, requested, window->title());
     if (QWindowsContext::verboseIntegration || QWindowsContext::verboseWindows)
